<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_qr"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_back"
            app:layout_constraintTop_toTopOf="@id/iv_back" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_bg"
            android:layout_width="match_parent"
            android:layout_height="231dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/bg_raidus12_3"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_input"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#00000000"
            android:gravity="top"
            android:hint="@string/please_enter_text"
            android:padding="12dp"
            android:textColor="#161622"
            android:textColorHint="#C1C2C6"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/tv_create"
            app:layout_constraintLeft_toLeftOf="@id/iv_bg"
            app:layout_constraintRight_toRightOf="@id/iv_bg"
            app:layout_constraintTop_toTopOf="@id/iv_bg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_create"
            android:layout_width="99dp"
            android:layout_height="38dp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/bg_raidus12_1"
            android:gravity="center"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/iv_bg"
            app:layout_constraintRight_toRightOf="@id/iv_bg" />

        <androidx.cardview.widget.CardView
            android:id="@+id/iv_bg2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:visibility="gone"
            android:layout_marginTop="16dp"
            app:cardElevation="0dp"
            app:cardBackgroundColor="#00000000"
            app:cardCornerRadius="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_back">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_qr_code"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="fitXY" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_download"
            android:layout_width="110dp"
            android:layout_height="43dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/bg_raidus10"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/layout_share"
            app:layout_constraintTop_toBottomOf="@id/iv_bg2">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="6dp"
                android:src="@drawable/ic_save_local" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:text="@string/print"
                android:textColor="#000000"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layout_share"
            android:layout_width="110dp"
            android:layout_height="43dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/bg_raidus10"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintLeft_toRightOf="@id/layout_download"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_bg2">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginHorizontal="6dp"
                android:src="@drawable/ic_share_picture" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="6dp"
                android:text="Share"
                android:textColor="#000000"
                android:textSize="12sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>